Layout: Responsive Layout with Header and Main

--- a/test-app/src/app/modules/starwars/starwars.component.html
+++ b/test-app/src/app/modules/starwars/starwars.component.html
@@ -1,4 +1,10 @@
-<header>TODO Star Wars header here</header>
+<div fxLayout="column" fxFlexFill>
+  <header class="header">TODO Star Wars header here</header>
 
-<router-outlet></router-outlet>
+  <main fxFlex>
+    <router-outlet></router-outlet>
+  </main>
+</div>
+
+
 
