--- a/test-app/src/app/modules/starwars/films-detail.component/films-detail.component.html
+++ b/test-app/src/app/modules/starwars/films-detail.component/films-detail.component.html
@@ -1,3 +1,9 @@
-<h2>Filmdetails</h2>
-<h1>aälskdjfow</h1>
-<h3>Episode so und so</h3>
+<div *ngIf="film | async as f">
+  <h2>Filmdetails</h2>
+  <h1>{{f.title}}</h1>
+  <h3>Episode 0293042</h3>
+
+  <div>
+    {{f.opening_crawl}}
+  </div>
+</div>
