Layout: Responsive header and main

--- a/test-app/src/app/modules/starwars/starwars.component.html
+++ b/test-app/src/app/modules/starwars/starwars.component.html
@@ -1,21 +1,27 @@
 <div fxLayout="column" fxFlexFill>
-  <header class="header" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
-    <img src="assets/icons8-star-wars.svg">
-    <nav fxLayout="row wrap">
-      <a routerLink="films" routerLinkActive="active">{{films}}</a>
-      <a routerLink="characters" routerLinkActive="active">{{characteres}}</a>
-      <a routerLink="species" routerLinkActive="active">{{species}}</a>
-      <a routerLink="planets" routerLinkActive="active" >{{planets}}</a>
-      <a routerLink="starships" routerLinkActive="active">{{starships}}</a>
-      <a routerLink="vehicles" routerLinkActive="active">{{vehicles}}</a>
-    </nav>
-    <div fxFlex></div>
-    <input placeholder="Search">
-  </header>
+  <div fxLayout="row" fxLayoutAlign="center stretch" class="header-container">
+    <header fxFlex fxFlex.gt-md="1280px"
+            class="header" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
+      <img src="assets/icons8-star-wars.svg">
+      <nav fxLayout="row wrap">
+        <a routerLink="films" routerLinkActive="active">{{films}}</a>
+        <a routerLink="characters" routerLinkActive="active">{{characteres}}</a>
+        <a routerLink="species" routerLinkActive="active">{{species}}</a>
+        <a routerLink="planets" routerLinkActive="active" >{{planets}}</a>
+        <a routerLink="starships" routerLinkActive="active">{{starships}}</a>
+        <a routerLink="vehicles" routerLinkActive="active">{{vehicles}}</a>
+      </nav>
+      <div fxFlex></div>
+      <input placeholder="Search">
+    </header>
+  </div>
 
-  <main fxFlex>
-    <router-outlet></router-outlet>
-  </main>
+
+  <div fxFlex fxLayout="row" fxLayoutAlign="center stretch">
+    <main fxFlex fxFlex.gt-md="1280px">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
 </div>
 
 
