--- a/test-app/src/styles.css
+++ b/test-app/src/styles.css
@@ -5,6 +5,8 @@
 
   --b-background-color: white;
   --b-font-color: black;
+
+  --shadow-color: #c5c5c5;
 }
 
 html, body {
@@ -18,8 +20,37 @@ h1,h2,h3 {
   font-family: 'Star Jedi';
 }
 
+h1 {
+  text-align: center;
+}
+
 input {
   font-family: 'Open Sans';
   padding: 1em;
   border-radius: 2px;
+}
+
+.card {
+  margin: 1em;
+  padding: 2em;
+  background-color: #EFEFEF;
+  box-shadow: 0px 2px 4px var(--shadow-color);
+}
+
+.card h4 {
+  margin: 0 0 1em;
+  font-size: 1.25em;
+}
+
+.card p {
+  font-size: 0.8em;
+  margin: 0;
+}
+
+.card a {
+  display: inline-block;
+  margin-top: 1em;
+  text-decoration: none;
+  color: var(--b-font-color);
+  font-size: 0.8em;
 }
