--- a/test-app/src/styles.css
+++ b/test-app/src/styles.css
@@ -4,6 +4,7 @@
   --a-font-color-primary: #ABDDED;
 
   --b-background-color: white;
+  --b-background-color-secondary: #EFEFEF;
   --b-font-color: black;
 
   --shadow-color: #c5c5c5;
@@ -16,12 +17,16 @@ html, body {
   font-family: 'Open Sans';
 }
 
-h1,h2,h3 {
-  font-family: 'Star Jedi';
-}
-
 h1 {
+  font-family: 'Star Jedi';
+  font-size: 3em;
+}
+h1,h2 {
   text-align: center;
+  margin: 0;
+}
+h2 {
+  font-weight: normal;
 }
 
 input {
@@ -30,10 +35,21 @@ input {
   border-radius: 2px;
 }
 
+section {
+  margin: 1em;
+}
+
+section button {
+  padding: 1em;
+  background-color: var(--b-background-color-secondary);
+  border-radius: 2px;
+  border: none;
+}
+
 .card {
   margin: 1em;
   padding: 2em;
-  background-color: #EFEFEF;
+  background-color: var(--b-background-color-secondary);
   box-shadow: 0px 2px 4px var(--shadow-color);
 }
 
