--- a/test-app/src/styles.css
+++ b/test-app/src/styles.css
@@ -39,11 +39,22 @@ section {
   margin: 1em;
 }
 
+section textarea {
+  font-family: 'Open Sans';
+  font-size: 0.9em;
+  width: 100%;
+  height: 100%;
+  border: none;
+  resize: none;
+}
+
 section button {
-  padding: 1em;
+  padding: 1em 0 1em 1em;
+  margin-right: 1em;
   background-color: var(--b-background-color-secondary);
   border-radius: 2px;
   border: none;
+  font-weight: bold;
 }
 
 .card {
