Film Detail: add image

--- a/test-app/src/app/modules/starwars/films-detail/films-detail.component.html
+++ b/test-app/src/app/modules/starwars/films-detail/films-detail.component.html
@@ -1,14 +1,19 @@
 <h1>{{film?.title}}</h1>
 <h2>{{episode}}</h2>
 
-<section>
-  <h3>Details:</h3>
-  <p><b>Director:</b> {{film?.director}}</p>
-  <p><b>Producer:</b> {{film?.producer}}</p>
-  <p><b>Release Date:</b> {{film?.release_date | date: 'dd.MM.yyyy'}}</p>
-  <div ngStyle.gt-xs="height: 450px; width: 50%" ngStyle.xs="height: 450px; width: 100%">
+<section fxLayout.gt-xs="row" fxLayout.xs="column-reverse" fxLayoutGap.xs="1em">
+  <div fxFlex.gt-xs="50" fxFlex.xs="100">
+    <h3>Details:</h3>
+    <p><b>Director:</b> {{film?.director}}</p>
+    <p><b>Producer:</b> {{film?.producer}}</p>
+    <p><b>Release Date:</b> {{film?.release_date | date: 'dd.MM.yyyy'}}</p>
+    <div ngStyle.gt-xs="height: 450px; width: 50%" ngStyle.xs="height: 450px; width: 100%">
     <textarea [innerHTML]="film?.opening_crawl">
     </textarea>
+    </div>
+  </div>
+  <div fxFlex.gt-xs="50" fxFlex.xs="100" class="img-container">
+    <img *ngIf="imageLink | async as link" [src]="link">
   </div>
 </section>
 
