--- a/test-app/src/styles.css
+++ b/test-app/src/styles.css
@@ -36,7 +36,21 @@ input {
 }
 
 section {
-  margin: 1em;
+  margin-top: 2em;
+}
+
+section h3 {
+  margin-top: 0;
+}
+
+section .img-container {
+  height: 400px;
+}
+
+section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 section textarea {
